--- a/GUIDIR_SAINTJORE.html
+++ b/GUIDIR_SAINTJORE.html
@@ -59,19 +59,25 @@
             <section id="ETHICALLY-COMPANIES MARQUES">
                 <p> <strong> Idée finale :  </strong> une application pour reconnaître la maison mère des produits via leur marque/entreprise 
                     afin de donner des informations sur celle-ci (la maison mère). L’objectif est de permettre à des 
-                    consommateurs engagés et responsables, de s’informer et de consommer de manière responsable.
-                </p>
-                <a href="placeholder"> Placeholder site web </a>
-                <p>
-                    <strong> Écran principal : </strong>
-                    Un champ de saisie où les utilisateurs peuvent entrer la marque ou l’entreprise qui les intéresse.
-                    Objectif principal : les entreprises/marques alimentaires (avec la possibilité d’élargir ensuite à d’autres secteurs).
+                    consommateurs engagés et responsables, de s’informer et de consommer de manière responsable. <br>
+
+                    <!-- <strong> Écran principal : </strong> -->
+                    Un champ de saisie où les utilisateurs peuvent entrer la marque ou l’entreprise qui les intéresse. <br>
+                    <strong> Objectif principal : </strong> les entreprises/marques alimentaires (avec la possibilité d’élargir ensuite à d’autres secteurs).
                     L’application recherche l’entreprise mère dans notre base de données.
                     Elle fournit des informations à son sujet (concernant les scandales ou l’éthique de l’entreprise). 
                     De plus, elle ajoute quelques liens vers des articles pertinents à propos de cette entreprise/marque (= sources).
 
+                    <!-- + rajouter fonctionnalite index  -->
+                    
+                    <!-- + rajouter ouverture de l'application par secteur -->
+
                 </p>
-                
+
+                <br>
+                <a href="https://docs.google.com/presentation/d/16Jxm-8e7UyqYNnuY2YRmP-pLaRpyYqueRlOt-hdhQJs/edit?slide=id.p#slide=id.p">G-slides</a>
+                <br>
+                <a href="placeholder"> Placeholder site web </a>
             </section>
 
         </ul>
