[UPDATE] mise en page

--- a/GUIDIR_SAINTJORE.html
+++ b/GUIDIR_SAINTJORE.html
@@ -48,12 +48,11 @@
             <strong> Felix Saint-Jore </strong> <a href=mailto:“felix.saintjore@gmail.com”> mail</a> et 
             <strong> Laurent Guidir </strong> <a href=mailto:“laurentguiddir@gmail.com”> mail </a>
         </p>
-
-        <h2>Projet</h2>
-        
         <p>
-            Ce document sert de repo pour les devoirs de I&E
-        </p>        
+            Ce page sert de repertoire pour les devoirs de I&E
+        </p>  
+        <h2>Projet</h2>
+              
         <h2>Rendus :</h2>
         <ul>            
             <section id="ETHICALLY-COMPANIES MARQUES">
