[UPDATE] mise en page

--- a/GUIDIR_SAINTJORE.html
+++ b/GUIDIR_SAINTJORE.html
@@ -53,15 +53,17 @@
         </p>  
         <h2>Projet</h2>
               
-        <h2>Rendus :</h2>
+        <h3>Rendus :</h3>
         <ul>            
             <section id="ETHICALLY-COMPANIES MARQUES">
-                <p> <strong> Idée finale :  </strong> une application pour reconnaître la maison mère des produits via leur marque/entreprise 
-                    afin de donner des informations sur celle-ci (la maison mère). L’objectif est de permettre à des 
+                <p> <strong> Idée finale :  </strong> Nous proposons une application pour reconnaître la maison mère des produits via leur 
+                    marque/entreprise ainsi que les scandales dans lesquels elles sont été impliquées afin de fournir ces 
+                    informations aux utilisateurs. L’objectif est de permettre à des 
                     consommateurs engagés et responsables, de s’informer et de consommer de manière responsable. <br>
 
                     <!-- <strong> Écran principal : </strong> -->
                     Un champ de saisie où les utilisateurs peuvent entrer la marque ou l’entreprise qui les intéresse. <br>
+                    <br>
                     <strong> Objectif principal : </strong> les entreprises/marques alimentaires (avec la possibilité d’élargir ensuite à d’autres secteurs).
                     L’application recherche l’entreprise mère dans notre base de données.
                     Elle fournit des informations à son sujet (concernant les scandales ou l’éthique de l’entreprise). 
@@ -75,6 +77,7 @@
 
                 <br>
                 <a href="https://docs.google.com/presentation/d/16Jxm-8e7UyqYNnuY2YRmP-pLaRpyYqueRlOt-hdhQJs/edit?slide=id.p#slide=id.p">G-slides</a>
+                <br>
                 <br>
                 <a href="placeholder"> Placeholder site web </a>
             </section>
