--- a/GUIDIR_SAINTJORE.html
+++ b/GUIDIR_SAINTJORE.html
@@ -59,10 +59,19 @@
                 <p> <strong> Idée finale :  </strong> Nous proposons une application pour reconnaître la maison mère des produits via leur 
                     marque/entreprise ainsi que les scandales dans lesquels elles sont été impliquées afin de fournir ces 
                     informations aux utilisateurs. L’objectif est de permettre à des 
-                    consommateurs engagés et responsables, de s’informer et de consommer de manière responsable. <br>
+                    consommateurs engagés et responsables, de s’informer et de consommer de manière responsable.<br>
 
+                    <br>
                     <!-- <strong> Écran principal : </strong> -->
-                    Un champ de saisie où les utilisateurs peuvent entrer la marque ou l’entreprise qui les intéresse. <br>
+
+
+
+                    L'application sous la forme d'un site web est munie : <br>
+                    D'une page d'acceuil composée:<br>
+                    <li>un champ de saisie où les utilisateurs peuvent entrer la marque ou l’entreprise qui les intéresse.</li> <br>
+                    <li>un bouton de recherche pour lancer la recherche.</li>
+                    <li>le nombre d'entreprise référencées par le site</li>
+                    <li>un lien vers un annuaire qui liste toute les entreprises/marques référencées</li>
                     <br>
                     <strong> Objectif principal : </strong> les entreprises/marques alimentaires (avec la possibilité d’élargir ensuite à d’autres secteurs).
                     L’application recherche l’entreprise mère dans notre base de données.
