--- a/GUIDIR_SAINTJORE.html
+++ b/GUIDIR_SAINTJORE.html
@@ -88,10 +88,10 @@
                 </p>
 
                 <br>
-                <a href="https://docs.google.com/presentation/d/16Jxm-8e7UyqYNnuY2YRmP-pLaRpyYqueRlOt-hdhQJs/edit?slide=id.p#slide=id.p">G-slides</a>
+                <a href="https://docs.google.com/presentation/d/16Jxm-8e7UyqYNnuY2YRmP-pLaRpyYqueRlOt-hdhQJs/edit?slide=id.p#slide=id.p">Google slides</a>
                 <br>
                 <br>
-                <a href="placeholder"> Placeholder site web </a>
+                <a href="app/app.html"> Placeholder site web </a>
             </section>
 
         </ul>
