--- a/app/app.html
+++ b/app/app.html
@@ -180,7 +180,7 @@
         </section>
 
         <section id="annuaire" class="directory">
-            <h2>Annuaire des marques référencées</h2>
+            <h2>Annuaire des marques et entreprises référencées</h2>
             <ul data-directory></ul>
         </section>
     </main>
