[UPDATE] Java file

--- a/GUIDIR_SAINTJORE.html
+++ b/GUIDIR_SAINTJORE.html
@@ -60,7 +60,7 @@
         <p class="names">
             Contacts: <br> 
             <strong> Felix Saint-Jore </strong> <a href=mailto:“felix.saintjore@gmail.com”> mail</a> et 
-            <strong> Laurent Guidir </strong> <a href=mailto:“laurentguiddir@gmail.com”> mail </a>
+            <strong> Laurent Guidir </strong> <a href=mailto:“laurent.guiddir@universite-paris-saclay.fr”> mail </a>
         </p>
         <p>
             Ce page sert de repertoire pour les devoirs de I&E
@@ -104,6 +104,8 @@
                         Votre navigateur ne peut pas lire cette vidéo. Vous pouvez la <a href="presentation_temp.mp4">télécharger ici</a>.
                     </video>
                 </div>
+                <br>
+                <a href="HelloWorld.java">HelloWorld.java</a>
             </section>
 
         </ul>
