[UPDATE] lien du site remplacé par celui host sur la VM

--- a/GUIDIR_SAINTJORE.html
+++ b/GUIDIR_SAINTJORE.html
@@ -97,7 +97,7 @@
                 <a href="https://docs.google.com/presentation/d/16Jxm-8e7UyqYNnuY2YRmP-pLaRpyYqueRlOt-hdhQJs/edit?slide=id.p#slide=id.p">Google slides</a>
                 <br>
                 <br>
-                <a href="app/app.html"> Site web </a>
+                <a href="https://ethicallyy.alwaysdata.net/"> Site web </a>
                 <div class="video-presentation">
                     <video controls>
                         <source src="presentation_temp.mp4" type="video/mp4">
