--- a/GUIDIR_SAINTJORE.html
+++ b/GUIDIR_SAINTJORE.html
@@ -96,6 +96,8 @@
                 <br>
                 <a href="https://docs.google.com/presentation/d/16Jxm-8e7UyqYNnuY2YRmP-pLaRpyYqueRlOt-hdhQJs/edit?slide=id.p#slide=id.p">Google slides</a>
                 <br>
+                <a href="slides_presentation.pdf">Slides</a>
+                <br>
                 <br>
                 <a href="https://ethicallyy.alwaysdata.net/"> Site web  </a>
                 <div class="video-presentation">
