ajout du lien vers video

--- a/GUIDIR_SAINTJORE.html
+++ b/GUIDIR_SAINTJORE.html
@@ -100,11 +100,9 @@
                 <br>
                 <br>
                 <a href="https://ethicallyy.alwaysdata.net/"> Site web  </a>
-                <div class="video-presentation">
-                    <video controls>
-                        <source src="presentation_temp.mp4" type="video/mp4">
-                        Votre navigateur ne peut pas lire cette vidéo. Vous pouvez la <a href="presentation_temp.mp4">télécharger ici</a>.
-                    </video>
+
+                <a href="https://www.youtube.com/watch?v=E03_WEHduNk">Vidéo de présentation accessible sur youtube en vous connectant avec votre compte google e*..*r@gmail.com</a>.
+
                 </div>
                 <br>
                 <a href="HelloWorld.java">HelloWorld.java</a>
