ajout du lien vers video

--- a/GUIDIR_SAINTJORE.html
+++ b/GUIDIR_SAINTJORE.html
@@ -101,9 +101,7 @@
                 <br>
                 <a href="https://ethicallyy.alwaysdata.net/"> Site web </a>
                 <br>
-                <a href="https://www.youtube.com/watch?v=E03_WEHduNk">Vidéo de présentation accessible sur youtube en vous connectant avec votre compte google e*..*r@gmail.com</a>.
-
-                </div>
+                <a href="https://www.youtube.com/watch?v=E03_WEHduNk">Vidéo de présentation accessible sur youtube en vous connectant avec votre compte google e*..*r@gmail.com</a>
                 <br>
                 <a href="HelloWorld.java">HelloWorld.java</a>
             </section>
