--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop Ethically · V0</title>
     <style>
-        :root {
+        /* root cible la balise <html>, reglages par defauts */
+        :root { 
             font-family: 'Segoe UI', Roboto, Arial, sans-serif;
             color: #1c2331;
             background-color: #eef2f7;
         }
         * {
+            /* * = selecteur universel, s'applique a ts les elems de la page (a, p, div...) 
+                box-sizing: border-box permet d'inclure le padding et la bordure dans la largeur totale d'un element
+            */
             box-sizing: border-box;
         }
         body {
@@ -158,7 +162,7 @@
 <body>
     <header>
         <div class="wrapper">
-            <p class="eyebrow">Prototype V0</p>
+            <p>Prototype V0</p>
             <h1>Shop Ethically</h1>
             <p>Identifiez la maison mère d'une marque, ses controverses majeures et accédez rapidement aux sources.</p>
         </div>
