[UPDATE] texte blanc sur fond bleu

--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,8 @@
         }
         .card header p {
             margin: 4px 0;
-            color: #475069;
+            /* color: #475069; */
+            color: #f4f6fb; /* blancs sur fond bleu */
         }
         .card p {
             line-height: 1.5;
