--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shop Ethically · V0</title>
+    <title>Shop Ethically</title>
     <style>
         /* root cible la balise <html>, reglages par defauts */
         :root { 
