--- a/GUIDIR_SAINTJORE.html
+++ b/GUIDIR_SAINTJORE.html
@@ -70,10 +70,15 @@
         <h3>Rendus :</h3>
         <ul>            
             <section id="ETHICALLY-COMPANIES MARQUES">
-                <p> <strong> Idée finale :  </strong> Nous proposons une application pour reconnaître la maison mère des produits via leur 
-                    marque/entreprise ainsi que les scandales dans lesquels elles sont impliquées afin de fournir ces 
-                    informations aux utilisateurs. L’objectif est de permettre à des 
-                    consommateurs engagés et responsables, de s’informer et de consommer de manière responsable.<br>
+                <p>De plus en plus de personnes cherchent à consommer de manière éthique, mais ont encore du mal 
+                    à le faire en raison de l'opacité des liens et des relations entre les entreprises/marques, 
+                    ainsi que de leurs actions réelles.</p>
+                <p> <strong> Idée finale :  </strong> Pour les aider, nous proposons donc une application pour reconnaître la maison mère des
+                     entreprises ainsi que les scandales dans lesquels elles sont impliquées afin de fournir ces
+                      informations aux utilisateurs de manière centralisée. L’objectif est de permettre à des consommateurs 
+                      engagés, de pouvoir s’informer et consommer de manière responsable, en soutenant les entreprises et
+                       marques avec lesquels ils sont en adéquation, ou autre contraire boycotter celles qu'ils souhaitent 
+                       ne pas soutenir en raison de leur agissements ou impacts négatifs.<br>
 
                     <br>
                     <!-- <strong> Écran principal : </strong> -->
@@ -82,22 +87,12 @@
                         <li> d'un champ de saisie où les utilisateurs peuvent entrer la marque ou l’entreprise qui les intéresse.</li>
                         <li> d'un bouton de recherche pour lancer la recherche.</li>
                         <li> du nombre d'entreprise référencées par le site</li>
-                        <li> d'un lien vers un annuaire qui liste toute les entreprises/marques référencées</li>
-    
+                        <li> d'un lien vers la section annuaire cliquable qui liste toute les entreprises/marques référencées</li>
                     </p>
-
-                    <br>
-                    <strong> Objectif principal : </strong> les entreprises/marques alimentaires (avec la possibilité d’élargir ensuite à d’autres secteurs).
-                    L’application recherche l’entreprise mère dans notre base de données et l'affiche.
-                    Elle fournit des aussi informations à son sujet (concernant les scandales ou l’éthique de l’entreprise) sous forme liens vers des articles pertinents 
-                    à propos de cette entreprise/marque.
                 </p>
 
                 <br>
-                <a href="https://docs.google.com/presentation/d/16Jxm-8e7UyqYNnuY2YRmP-pLaRpyYqueRlOt-hdhQJs/edit?slide=id.p#slide=id.p">Google slides</a>
-                <br>
                 <a href="slides_presentation.pdf">Slides</a>
-                <br>
                 <br>
                 <a href="https://ethicallyy.alwaysdata.net/"> Site web </a>
                 <br>
